carousel immage clipping fixed

--- a/Portfolio/public/gallery/styles.css
+++ b/Portfolio/public/gallery/styles.css
@@ -33,23 +33,16 @@ main {
     box-shadow: 0px 13px 15px 7px rgba(0, 0, 0, 0.1);
 }
 
-.gallery-container {
+#carousel-wrapper {
     order: 1;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin: 10px;
+    width: 80%;
 }
 
-.carousel-inner {
-    width: 75%;
-    object-fit: contain;
-    margin: 0 100px 0 100px;
-    overflow: hidden;
-}
-
-#slide {
+.carousel-indicators #slide {
     width: 600px;
     height: 400px;
     object-fit: fill;
@@ -152,14 +145,32 @@ option[value="black"] {
     gap: 15px;
 }
 
+#thumbnail-container {
+    border: 1px solid #999;
+    border-radius: 5px;
+    padding: 15px;
+}
+
+#filters {
+    width: 100vh;
+    height: 50px;
+    padding-top: 10px;
+}
+
 #thumbnail {
     width: 300px;
     height: 200px;
-    background-color: #ddd;
+    background-color: #ffffff;
     border: 1px solid #999;
-    text-align: center;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     border-radius: 7px;
+}
+
+#thumbnail img {
+    width: 100%;
+    margin: 5px;
 }
